--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ensdomains/mock",
-  "version": "1.0.15",
+  "version": "1.0.16",
   "description": "ENS mock scripts",
   "main": "dist/index.js",
   "files": [
@@ -44,12 +44,13 @@
   "dependencies": {
     "@0xproject/utils": "^2.0.2",
     "@babel/runtime": "^7.4.4",
+    "@ensdomains/address-encoder": "^0.1.1",
     "@ensdomains/dnsregistrar": "^0.3.5",
     "@ensdomains/dnssec-oracle": "^0.1.2",
     "@ensdomains/ens": "^0.3.10",
     "@ensdomains/ens-022": "npm:@ensdomains/ens@0.2.2",
     "@ensdomains/ethregistrar": "^1.2.2",
-    "@ensdomains/resolver": "^0.1.6",
+    "@ensdomains/resolver": "^0.1.11",
     "cross-fetch": "^3.0.2",
     "eth-ens-namehash": "^2.0.8",
     "lodash": "^4.17.11",
