--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "@ensdomains/ens": "^0.4.4",
     "@ensdomains/ens-022": "npm:@ensdomains/ens@0.2.2",
     "@ensdomains/ethregistrar": "^2.0.0",
+    "@ensdomains/ethregistrar-200": "npm:@ensdomains/ethregistrar@2.0.0",
     "@ensdomains/resolver": "0.2.4",
     "@ensdomains/subdomain-registrar": "^0.2.3",
     "chalk": "^3.0.0",
