--- a/package.json
+++ b/package.json
@@ -2,11 +2,9 @@
   "name": "@ensdomains/mock",
   "version": "2.0.6",
   "description": "ENS mock scripts",
-  "main": "dist/index.js",
+  "main": "src/index.js",
   "files": [
-    "src",
-    "dist",
-    "dist/*"
+    "src"
   ],
   "scripts": {
     "test": "jest --watch --verbose",
