--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@ensdomains/dnssec-oracle": "^0.1.2",
     "@ensdomains/ens": "^0.4.4",
     "@ensdomains/ens-022": "npm:@ensdomains/ens@0.2.2",
+    "@ensdomains/ethregistrar-202": "npm:@ensdomains/ethregistrar@2.0.2",
     "@ensdomains/ethregistrar": "^2.0.2",
     "@ensdomains/resolver": "0.2.4",
     "@ensdomains/subdomain-registrar": "^0.2.3",
