--- a/package.json
+++ b/package.json
@@ -49,14 +49,15 @@
     "@ensdomains/dnssec-oracle": "^0.1.2",
     "@ensdomains/ens": "^0.4.4",
     "@ensdomains/ens-022": "npm:@ensdomains/ens@0.2.2",
+    "@ensdomains/ethregistrar": "^2.0.3",
     "@ensdomains/ethregistrar-202": "npm:@ensdomains/ethregistrar@2.0.2",
-    "@ensdomains/ethregistrar": "^2.0.2",
     "@ensdomains/resolver": "0.2.4",
     "@ensdomains/subdomain-registrar": "^0.2.3",
     "chalk": "^3.0.0",
     "cross-fetch": "^3.0.2",
     "eth-ens-namehash": "^2.0.8",
     "lodash": "^4.17.11",
+    "moment": "^2.26.0",
     "table": "^5.4.6",
     "web3": "^1.2.6"
   },
