--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@ensdomains/mock",
-  "version": "2.0.19",
+  "name": "ensdomains-mock",
+  "version": "2.0.20",
   "description": "ENS mock scripts",
   "main": "dist/index.js",
   "files": [
