--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   ],
   "scripts": {
     "test": "jest --watch --verbose",
+    "preTest": "node -r esm src/testing-utils/preTest.js default",
     "build": "babel src -d dist --ignore src/**/*.test.js,**/__tests__/**",
     "pub": "yarn build && yarn publish"
   },
