--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@ensdomains/mock",
   "version": "2.0.22",
   "description": "ENS mock scripts",
-  "main": "src/index.js",
+  "main": "dist/index.js",
   "files": [
     "src"
   ],
