--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "@ensdomains/mock",
-  "version": "2.0.26",
+  "version": "2.0.27",
   "description": "ENS mock scripts",
   "main": "dist/index.js",
   "files": [
-    "src"
+    "dist"
   ],
   "scripts": {
     "test": "jest --watch --verbose",
