--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   ],
   "scripts": {
     "test": "jest --watch --verbose",
+    "preTest": "node -r esm src/testing-utils/preTest.js",
     "build": "babel src -d dist --ignore src/**/*.test.js,**/__tests__/**",
     "pub": "yarn build && yarn publish"
   },
