--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "test": "jest --watch --verbose",
     "preTest": "node -r esm src/testing-utils/preTest.js",
-    "build": "babel src -d dist --ignore src/**/*.test.js,**/__tests__/**",
+    "build": "babel src -d dist --copy-files --ignore src/**/*.test.js,**/__tests__/**",
     "pub": "yarn build && yarn publish"
   },
   "author": "",
@@ -58,7 +58,7 @@
     "lodash": "^4.17.11",
     "moment": "^2.26.0",
     "table": "^5.4.6",
-    "web3": "^1.2.6"
+    "web3": "^1.3.0"
   },
   "repository": {
     "type": "git",
