--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@ensdomains/mock",
-  "version": "2.0.30",
+  "name": "ensdomains-mock",
+  "version": "2.0.31",
   "description": "ENS mock scripts",
   "main": "dist/index.js",
   "files": [
@@ -43,22 +43,13 @@
   "dependencies": {
     "@0xproject/utils": "^2.0.2",
     "@babel/runtime": "^7.4.4",
-    "@ensdomains/address-encoder": "^0.1.1",
-    "@ensdomains/dnsregistrar": "^0.3.5",
-    "@ensdomains/dnssec-oracle": "^0.1.2",
-    "@ensdomains/ens": "^0.4.4",
-    "@ensdomains/ens-022": "npm:@ensdomains/ens@0.2.2",
-    "@ensdomains/ethregistrar": "^2.0.4",
-    "@ensdomains/ethregistrar-202": "npm:@ensdomains/ethregistrar@2.0.2",
-    "@ensdomains/resolver": "0.2.4",
-    "@ensdomains/subdomain-registrar": "^0.2.3",
     "chalk": "^3.0.0",
     "cross-fetch": "^3.0.2",
+    "ensdomain-contracts": "^0.0.3",
     "eth-ens-namehash": "^2.0.8",
     "lodash": "^4.17.11",
     "moment": "^2.26.0",
-    "table": "^5.4.6",
-    "web3": "^1.3.0"
+    "table": "^5.4.6"
   },
   "repository": {
     "type": "git",
@@ -67,5 +58,8 @@
   "bugs": {
     "url": "https://github.com/ensdomains/mock/issues"
   },
-  "homepage": "https://github.com/ensdomains/mock#readme"
+  "homepage": "https://github.com/ensdomains/mock#readme",
+  "engines": {
+    "node": ">=15.1.0"
+  }
 }
