--- a/package.json
+++ b/package.json
@@ -43,9 +43,9 @@
   "dependencies": {
     "@0xproject/utils": "^2.0.2",
     "@babel/runtime": "^7.4.4",
+    "@ensdomains/contracts": "^0.0.1",
     "chalk": "^3.0.0",
     "cross-fetch": "^3.0.2",
-    "ensdomain-contracts": "^0.0.3",
     "eth-ens-namehash": "^2.0.8",
     "lodash": "^4.17.11",
     "moment": "^2.26.0",
