--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ensdomains-mock",
-  "version": "2.0.33",
+  "version": "2.0.34",
   "description": "ENS mock scripts",
   "main": "dist/index.js",
   "files": [
@@ -9,6 +9,7 @@
   "scripts": {
     "test": "jest --watch --verbose",
     "preTest": "node -r esm src/testing-utils/invokePreTest.js",
+    "preTest:dnssec": "node -r esm src/testing-utils/invokePreTest.js dnssec",
     "build": "babel src -d dist --copy-files --ignore src/**/*.test.js,**/__tests__/**",
     "pub": "yarn build && yarn publish"
   },
@@ -46,6 +47,7 @@
     "@ensdomains/contracts": "^0.0.1",
     "chalk": "^3.0.0",
     "cross-fetch": "^3.0.2",
+    "dns-packet": "^5.2.1",
     "eth-ens-namehash": "^2.0.8",
     "lodash": "^4.17.11",
     "moment": "^2.26.0",
