--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ensdomains/mock",
-  "version": "2.0.30",
+  "version": "2.0.34",
   "description": "ENS mock scripts",
   "main": "dist/index.js",
   "files": [
@@ -8,8 +8,9 @@
   ],
   "scripts": {
     "test": "jest --watch --verbose",
-    "preTest": "node -r esm src/testing-utils/preTest.js",
-    "build": "babel src -d dist --ignore src/**/*.test.js,**/__tests__/**",
+    "preTest": "node -r esm src/testing-utils/invokePreTest.js",
+    "preTest:dnssec": "node -r esm src/testing-utils/invokePreTest.js dnssec",
+    "build": "babel src -d dist --copy-files --ignore src/**/*.test.js,**/__tests__/**",
     "pub": "yarn build && yarn publish"
   },
   "author": "",
@@ -43,22 +44,16 @@
   "dependencies": {
     "@0xproject/utils": "^2.0.2",
     "@babel/runtime": "^7.4.4",
-    "@ensdomains/address-encoder": "^0.1.1",
-    "@ensdomains/dnsregistrar": "^0.3.5",
-    "@ensdomains/dnssec-oracle": "^0.1.2",
-    "@ensdomains/ens": "^0.4.4",
-    "@ensdomains/ens-022": "npm:@ensdomains/ens@0.2.2",
-    "@ensdomains/ethregistrar": "^2.0.4",
-    "@ensdomains/ethregistrar-202": "npm:@ensdomains/ethregistrar@2.0.2",
-    "@ensdomains/resolver": "0.2.4",
-    "@ensdomains/subdomain-registrar": "^0.2.3",
+    "@ensdomains/contracts": "^0.0.1",
+    "@ensdomains/dnssec-oracle-anchors": "^0.0.1",
     "chalk": "^3.0.0",
     "cross-fetch": "^3.0.2",
+    "dns-packet": "^5.2.1",
     "eth-ens-namehash": "^2.0.8",
     "lodash": "^4.17.11",
     "moment": "^2.26.0",
     "table": "^5.4.6",
-    "web3": "^1.2.6"
+    "web3": "^1.3.0"
   },
   "repository": {
     "type": "git",
