--- a/package.json
+++ b/package.json
@@ -43,8 +43,8 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.4.4",
-    "@ensdomains/contracts": "^0.0.3",
     "@ensdomains/dnssec-oracle-anchors": "^0.0.1",
+    "@ensdomains/ens-archived-contracts": "^0.0.1",
     "@ensdomains/ens-contracts": "^0.0.2",
     "chalk": "^3.0.0",
     "cross-fetch": "^3.0.2",
