--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "@ensdomains/mock",
   "version": "2.0.40",
   "description": "ENS mock scripts",
-  "main": "dist/index.js",
+  "main": "src/index.js",
   "files": [
-    "dist"
+    "src"
   ],
   "scripts": {
     "test": "jest --watch --verbose",
@@ -52,6 +52,7 @@
     "eth-ens-namehash": "^2.0.8",
     "lodash": "^4.17.11",
     "moment": "^2.26.0",
+    "name-wrapper": "1.0.0",
     "table": "^5.4.6",
     "web3": "^1.3.0"
   },
