--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@ensdomains/dnssec-oracle-anchors": "^0.0.1",
     "@ensdomains/ens-archived-contracts": "^0.0.1",
     "@ensdomains/ens-contracts": "^0.0.7",
+    "@ensdomains/offchain-resolver-contracts": "^0.0.2",
     "@nomiclabs/hardhat-truffle5": "^2.0.3",
     "@nomiclabs/hardhat-web3": "^2.0.0",
     "chalk": "^3.0.0",
