--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ensdomains/mock",
-  "version": "2.1.49",
+  "version": "2.1.50",
   "description": "ENS mock scripts",
   "main": "dist/index.js",
   "files": [
@@ -46,7 +46,10 @@
     "@babel/runtime": "^7.4.4",
     "@ensdomains/dnssec-oracle-anchors": "^0.0.1",
     "@ensdomains/ens-archived-contracts": "^0.0.1",
-    "@ensdomains/ens-contracts": "^0.0.10",
+    "@ensdomains/ens-contracts": "^0.0.11",
+    "@ensdomains/offchain-resolver-contracts": "^0.2.1",
+    "@nomiclabs/hardhat-truffle5": "^2.0.3",
+    "@nomiclabs/hardhat-web3": "^2.0.0",
     "chalk": "^3.0.0",
     "cross-fetch": "^3.0.2",
     "dns-packet": "^5.2.1",
